before improving main html

--- a/docs/templates/docs/about.html
+++ b/docs/templates/docs/about.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<h1> Forum for document manager </h1>
+<h1>Document manager </h1>
 {% endblock content %}
 
 {% block content2 %}
