--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,32 +4,47 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+  <!-- If IE use the latest rendering engine -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Set the page to the width of the device and set the zoon level -->
+  <meta name="viewport" content="width = device-width, initial-scale = 1">
+
+<!--
+ <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+-->
+    <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+
+
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+
+
     {% if title %}
-        <title>My blog - {{ title }}</title>
+        <title>Forum - {{ title }}</title>
     {% else %}
-        <title>My blog</title>
+        <title>Forum</title>
     {% endif %}
+
+
+
 </head>
 <body>
 
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'docs-home' %}">DocManager App</a>
+            <a class="navbar-brand mr-4" href="{% url 'main-home' %}">Home</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="{% url 'docs-home' %}">home</a>
+                    <a class="nav-item nav-link" href="{% url 'docs-home' %}">my docs</a>
                     <a class="nav-item nav-link" href="{% url 'docs-about' %}">about</a>
                 </div>
                 <!-- Navbar Right Side -->
@@ -37,7 +52,7 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'blog-home' %}">Forum</a>
-                        <a class="nav-item nav-link" href="{% url 'post-create' %}">ForumPost</a>
+                        <a class="nav-item nav-link" href="{% url 'post-create' %}">Post</a>
                         <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
 
@@ -67,6 +82,8 @@
     </div>
 </main>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
