--- a/docs/templates/docs/home.html
+++ b/docs/templates/docs/home.html
@@ -2,5 +2,24 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+    <div class="container">
+        <h1>File system</h1>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="imgAbt">
+                    <img width="820" height="620" src="https://edge.alluremedia.com.au/m/l/2016/10/solidexplorer.png"/>
+                </div>
+            </div>
+
+         
+        </div>
+    </div>
+
+
+
+
+
+
+
 {% endblock content %}
 
