--- a/docs/templates/docs/home.html
+++ b/docs/templates/docs/home.html
@@ -1,15 +1,18 @@
 {% extends "blog/base.html" %}
+
 {% load crispy_forms_tags %}
 {% block content %}
 
     <div class="container">
-        <h1>File system</h1>
+        <h1>Your documents</h1>
         <div class="row">
-            <div class="col-md-8">
-                <div class="imgAbt">
-                    <img width="820" height="620" src="https://edge.alluremedia.com.au/m/l/2016/10/solidexplorer.png"/>
-                </div>
-            </div>
+           <div class="jumbotron">
+    <p>Upload, download and share easily your documents.</p>
+               <p>
+                  <a href="docs/browse" class="btn btn-primary btn-lg" role="button">Browse</a>
+               <p></p>
+           </div>
+
 
          
         </div>
