--- a/filemanager/templates/filemanager/index.html
+++ b/filemanager/templates/filemanager/index.html
@@ -2,10 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
  <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery.min.js" %}"></script>
  <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery-migrate.min.js" %}"></script>
  <script type="text/javascript" src="{% static "filemanager/js/jquery/zclip/jquery.zclip.min.js" %}"></script>
  <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style.css" %}"/>
+ <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style_popup.css" %}"/>
  <!--[if IE]>
    <script type="text/javascript" src="{{ STATIC_URL }}js/es5-shim.min.js"></script>
  <![endif]-->
@@ -28,6 +31,21 @@
 
 </head>
 <body oncontextmenu='return false;'>
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span id = "closeid" class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+
+
+
  <div id="main">
   <div id="left">
   </div>
@@ -106,7 +124,7 @@
   <div id="delete-file" class="menu-option" onclick="do_action('delete','file')">
    <img src="{% static "filemanager/images/delete.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Delete</span>
   </div>
- <div id="share-file" class="menu-option" onclick="do_action('share','file')">
+ <div id="share-file" class="menu-option" onclick="openDialog()">
    <img src="{% static "filemanager/images/share.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Share</span>
   </div>
   {% if public_url_base %}
@@ -132,5 +150,24 @@
      <span id="status">
      </span>
  </div>
+
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+
 </body>
 </html>
