--- a/filemanager/templates/filemanager/index.html
+++ b/filemanager/templates/filemanager/index.html
@@ -149,20 +149,15 @@
   <div class="modal-content">
     <span id = "closeid" class="close">&times;</span>
     <p>..</p>
-      <h2>Users</h2>
+      <h2>Users to share </h2>
 
 <input type="text" id="myInput" onkeyup="myFunction2()" placeholder="Search for users.." title="Type in a name">
 
 <ul id="myUL">
-  <li><a href="#">Adele</a></li>
-  <li><a href="#">Agnes</a></li>
+    {% for user1 in users %}
+    <li><a href="#">{{ user1.email }}</a></li>
+    {% endfor %}
 
-  <li><a href="#">Billy</a></li>
-  <li><a href="#">Bob</a></li>
-
-  <li><a href="#">Calvin</a></li>
-  <li><a href="#">Christina</a></li>
-  <li><a href="#">Cindy</a></li>
 </ul>
 
     </div>
