working with links

--- a/filemanager/static/filemanager/css/style_popup.css
+++ b/filemanager/static/filemanager/css/style_popup.css
@@ -72,3 +72,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
 #myUL li a:hover:not(.header) {
   background-color: #eee;
 }
+  .state-icon {
+    left: -5px;
+}
+.list-group-item-primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(66, 139, 202);
+}
+
+/* DEMO ONLY - REMOVES UNWANTED MARGIN */
+.well .list-group {
+    margin-bottom: 0px;
+}
+
+
