--- a/docs/templates/docs/sendshare.html
+++ b/docs/templates/docs/sendshare.html
@@ -1,10 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+
+        <script type="text/javascript" src="{% static "filemanager/js/script.js" %}"></script>
 </head>
 <body>
-$END$
+<h3> generating secure link to share files  {{  path }} by user {{ user1 }} with user {{ user2 }}</h3>
 </body>
 </html>
