--- a/filemanager/templates/filemanager/index.html
+++ b/filemanager/templates/filemanager/index.html
@@ -2,199 +2,255 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
- <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery.min.js" %}"></script>
- <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery-migrate.min.js" %}"></script>
- <script type="text/javascript" src="{% static "filemanager/js/jquery/zclip/jquery.zclip.min.js" %}"></script>
- <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style.css" %}"/>
- <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style_popup.css" %}"/>
- <!--[if IE]>
+
+    <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "filemanager/js/jquery/jquery-migrate.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "filemanager/js/jquery/zclip/jquery.zclip.min.js" %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static "filemanager/css/style_popup.css" %}"/>
+
+
+    <!--[if IE]>
    <script type="text/javascript" src="{{ STATIC_URL }}js/es5-shim.min.js"></script>
  <![endif]-->
- <script type="text/javascript">
- var dir_structure = {{dir_structure|safe}};
- var messages = {{messages|safe}};
- var dir_id = {{current_id}};
- var ckeditor_baseurl = '{{ ckeditor_baseurl }}';
- var CKEditorFuncNum = {% if CKEditorFuncNum %}{{CKEditorFuncNum}}{% else %}null{%endif%};
- var static_url = '{{STATIC_URL}}';
- {% if public_url_base %}
-  var public_url_base = '{{public_url_base}}';
- {% endif %}
- var clipboard = { 'empty':true, 'path': 'full path will come here' ,
-     'mode': 'cut or copy', 'type': 'file or dir'}
- var space_consumed = {{space_consumed}};
- var max_space = {{max_space}}*1024;
- </script>
- <script type="text/javascript" src="{% static "filemanager/js/script.js"%}"></script>
+    <script type="text/javascript">
+        var dir_structure = {{dir_structure|safe}};
+        var messages = {{messages|safe}};
+        var dir_id = {{current_id}};
+        var ckeditor_baseurl = '{{ ckeditor_baseurl }}';
+        var CKEditorFuncNum = {% if CKEditorFuncNum %}{{CKEditorFuncNum}}{% else %}null{%endif%};
+        var static_url = '{{STATIC_URL}}';
+        {% if public_url_base %}
+            var public_url_base = '{{public_url_base}}';
+        {% endif %}
+        var clipboard = {
+            'empty': true, 'path': 'full path will come here',
+            'mode': 'cut or copy', 'type': 'file or dir'
+        }
+        var space_consumed = {{space_consumed}};
+        var max_space =
+        {{max_space}}*
+        1024;
+
+    </script>
+    <script type="text/javascript" src="{% static "filemanager/js/script.js" %}"></script>
+    <script type="text/javascript" src="{% static "filemanager/js/script_checkbox.js" %}"></script>
 
 </head>
 <body oncontextmenu='return false;'>
 
 
-
-
-
-
- <div id="main">
-  <div id="left">
-  </div>
-  <div id="right">
-   <div id="control">
-   <form method="POST" id="form" enctype="multipart/form-data" style="">{% csrf_token %}
-     <input type="file" id="ufile" name="ufile" style="position:fixed;top:-100px" multiple>
-     <input type="text" id="action" name="action" style="display:none;">
-     <input type="text" id="path" name="path" value="" style="display:none;">
-     <input type="text" id="name" name="name" value="" style="display:none;">
-     <input type="text" id="current_path" name="current_path" value="" style="display:none;">
-     <input type="text" id="file_or_dir" name="file_or_dir" value="" style="display:none;">
-     <input type="submit" id="submit" name="submit" value="Submit" style="display:none;">
-   <label class="control" id="upload-label" for="ufile">
-    <img src="{% static "filemanager/images/upload.png"%}" style="width:16px;height:16px" width="100%" height="100%"/>
-    <span>Upload Files</span>
-   </label>
-   </form>
-   <div id="message">
-   </div>
-   </div>
-   <div id="content" onmousedown='rightclick_handle(event,dir_id,"dom");'>
-   </div>
-  </div>
- </div>
- <div id="dom-menu" class="menu" style="display:none">
-  <div id="add-dir" class="menu-option" onclick="do_action('add','dom')">
-   <img src="{% static "filemanager/images/add_folder.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Create Folder</span>
-  </div><hr>
-  <div id="paste-dir" class="menu-option" onclick="do_action('paste','dom')">
-   <img src="{% static "filemanager/images/paste.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Paste</span>
-  </div><hr>
-  <div id="download-dir" class="menu-option" onclick="do_action('download','dom')">
-   <img src="{% static "filemanager/images/download.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Download</span>
-  </div>
- </div>
- <div id="dir-menu" class="menu" style="display:none">
-  <div id="add-dir" class="menu-option" onclick="do_action('add','dir')">
-   <img src="{% static "filemanager/images/add_folder.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Create Sub-Folder</span>
-  </div><hr>
-  <div id="cut-dir" class="menu-option" onclick="do_action('cut','dir')">
-   <img src="{% static "filemanager/images/cut.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Cut</span>
-  </div><hr>
-  <div id="copy-dir" class="menu-option" onclick="do_action('copy','dir')">
-   <img src="{% static "filemanager/images/copy.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Copy</span>
-  </div><hr>
-  <div id="paste-dir" class="menu-option" onclick="do_action('paste','dir')">
-   <img src="{% static "filemanager/images/paste.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Paste</span>
-  </div><hr>
-  <div id="rename-dir" class="menu-option" onclick="do_action('rename','dir')">
-   <img src="{% static "filemanager/images/rename.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Rename</span>
-  </div><hr>
-  <div id="download-dir" class="menu-option" onclick="do_action('download','dir')">
-   <img src="{% static "filemanager/images/download.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Download</span>
-  </div><hr>
-  <div id="delete-dir" class="menu-option" onclick="do_action('delete','dir')">
-   <img src="{% static "filemanager/images/delete.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Delete</span>
-  </div>
- </div>
- <div id="file-menu" class="menu" style="display:none">
-  <div id="rename-file" class="menu-option" onclick="do_action('rename','file')">
-   <img src="{% static "filemanager/images/rename.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Rename</span>
-  </div><hr>
-<div id="unzip-file" class="menu-option unzip-menu" onclick="do_action('unzip','file')" style="display:none">
-   <img src="{% static "filemanager/images/unzip.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Unzip</span>
-  </div><hr class="unzip-menu" style="display:none">
-  <div id="cut-file" class="menu-option" onclick="do_action('cut','file')">
-   <img src="{% static "filemanager/images/cut.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Cut</span>
-  </div><hr>
-  <div id="copy-file" class="menu-option" onclick="do_action('copy','file')">
-   <img src="{% static "filemanager/images/copy.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Copy</span>
-  </div><hr>
-  <div id="download-file" class="menu-option" onclick="do_action('download','file')">
-   <img src="{% static "filemanager/images/download.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Download</span>
-  </div><hr>
-  <div id="delete-file" class="menu-option" onclick="do_action('delete','file')">
-   <img src="{% static "filemanager/images/delete.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Delete</span>
-  </div>
- <div id="share-file" class="menu-option" onclick="openDialog()">
-   <img src="{% static "filemanager/images/share.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Share</span>
-  </div>
-  {% if public_url_base %}
-  <hr>
-  <div id="copy-public-link-file" class="menu-option">
-   <img src="{% static "filemanager/images/copy_public_link.png"%}" style="width:16px;height:16px" width="100%" height="100%"/><span>Copy public link</span>
-  </div>
-  {% endif %}
- </div> <div id="popup">
-  <div class="div1"><img src="{% static "filemanager/images/close.png"%}" onclick="$('#popup').hide();"/>
-  <div id="heading"></div></div>
-  <div class="div2"><input id="input" type="text"></div>
- </div>
- <div id="status-bar">
- {% if show_space %}
-    <div class="progress">
-         <div class="bar" id="space_quota">
-         </div>
+<div id="main">
+    <div id="left">
     </div>
-    <span id="space_quota_string">
-    </span>
- {% endif %}
-     <span id="status">
-     </span>
- </div>
-
- <!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span id = "closeid" class="close">&times;</span>
-    <p>..</p>
-      <h2>Users to share </h2>
-
-<input type="text" id="myInput" onkeyup="myFunction2()" placeholder="Search for users.." title="Type in a name">
-
-<ul id="myUL">
-    {% for user1 in users %}
-    <li><a href="#">{{ user1.email }}</a></li>
-    {% endfor %}
-
-</ul>
-
+    <div id="right">
+        <div id="control">
+            <form method="POST" id="form" enctype="multipart/form-data" style="">{% csrf_token %}
+                <input type="file" id="ufile" name="ufile" style="position:fixed;top:-100px" multiple>
+                <input type="text" id="action" name="action" style="display:none;">
+                <input type="text" id="path" name="path" value="" style="display:none;">
+                <input type="text" id="name" name="name" value="" style="display:none;">
+                <input type="text" id="current_path" name="current_path" value="" style="display:none;">
+                <input type="text" id="file_or_dir" name="file_or_dir" value="" style="display:none;">
+                <input type="submit" id="submit" name="submit" value="Submit" style="display:none;">
+                <label class="control" id="upload-label" for="ufile">
+                    <img src="{% static "filemanager/images/upload.png" %}" style="width:16px;height:16px" width="100%"
+                         height="100%"/>
+                    <span>Upload Files</span>
+                </label>
+            </form>
+            <div id="message">
+            </div>
+        </div>
+        <div id="content" onmousedown='rightclick_handle(event,dir_id,"dom");'>
+        </div>
     </div>
 </div>
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
+<div id="dom-menu" class="menu" style="display:none">
+    <div id="add-dir" class="menu-option" onclick="do_action('add','dom')">
+        <img src="{% static "filemanager/images/add_folder.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Create Folder</span>
+    </div>
+    <hr>
+    <div id="paste-dir" class="menu-option" onclick="do_action('paste','dom')">
+        <img src="{% static "filemanager/images/paste.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Paste</span>
+    </div>
+    <hr>
+    <div id="download-dir" class="menu-option" onclick="do_action('download','dom')">
+        <img src="{% static "filemanager/images/download.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Download</span>
+    </div>
+</div>
+<div id="dir-menu" class="menu" style="display:none">
+    <div id="add-dir" class="menu-option" onclick="do_action('add','dir')">
+        <img src="{% static "filemanager/images/add_folder.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Create Sub-Folder</span>
+    </div>
+    <hr>
+    <div id="cut-dir" class="menu-option" onclick="do_action('cut','dir')">
+        <img src="{% static "filemanager/images/cut.png" %}" style="width:16px;height:16px" width="100%" height="100%"/><span>Cut</span>
+    </div>
+    <hr>
+    <div id="copy-dir" class="menu-option" onclick="do_action('copy','dir')">
+        <img src="{% static "filemanager/images/copy.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Copy</span>
+    </div>
+    <hr>
+    <div id="paste-dir" class="menu-option" onclick="do_action('paste','dir')">
+        <img src="{% static "filemanager/images/paste.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Paste</span>
+    </div>
+    <hr>
+    <div id="rename-dir" class="menu-option" onclick="do_action('rename','dir')">
+        <img src="{% static "filemanager/images/rename.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Rename</span>
+    </div>
+    <hr>
+    <div id="download-dir" class="menu-option" onclick="do_action('download','dir')">
+        <img src="{% static "filemanager/images/download.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Download</span>
+    </div>
+    <hr>
+    <div id="delete-dir" class="menu-option" onclick="do_action('delete','dir')">
+        <img src="{% static "filemanager/images/delete.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Delete</span>
+    </div>
+</div>
+<div id="file-menu" class="menu" style="display:none">
+    <div id="rename-file" class="menu-option" onclick="do_action('rename','file')">
+        <img src="{% static "filemanager/images/rename.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Rename</span>
+    </div>
+    <hr>
+    <div id="unzip-file" class="menu-option unzip-menu" onclick="do_action('unzip','file')" style="display:none">
+        <img src="{% static "filemanager/images/unzip.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Unzip</span>
+    </div>
+    <hr class="unzip-menu" style="display:none">
+    <div id="cut-file" class="menu-option" onclick="do_action('cut','file')">
+        <img src="{% static "filemanager/images/cut.png" %}" style="width:16px;height:16px" width="100%" height="100%"/><span>Cut</span>
+    </div>
+    <hr>
+    <div id="copy-file" class="menu-option" onclick="do_action('copy','file')">
+        <img src="{% static "filemanager/images/copy.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Copy</span>
+    </div>
+    <hr>
+    <div id="download-file" class="menu-option" onclick="do_action('download','file')">
+        <img src="{% static "filemanager/images/download.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Download</span>
+    </div>
+    <hr>
+    <div id="delete-file" class="menu-option" onclick="do_action('delete','file')">
+        <img src="{% static "filemanager/images/delete.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Delete</span>
+    </div>
+    <div id="share-file" class="menu-option" onclick="openDialog()">
+        <img src="{% static "filemanager/images/share.png" %}" style="width:16px;height:16px" width="100%"
+             height="100%"/><span>Share</span>
+    </div>
+    {% if public_url_base %}
+        <hr>
+        <div id="copy-public-link-file" class="menu-option">
+            <img src="{% static "filemanager/images/copy_public_link.png" %}" style="width:16px;height:16px"
+                 width="100%" height="100%"/><span>Copy public link</span>
+        </div>
+    {% endif %}
+</div>
+<div id="popup">
+    <div class="div1"><img src="{% static "filemanager/images/close.png" %}" onclick="$('#popup').hide();"/>
+        <div id="heading"></div>
+    </div>
+    <div class="div2"><input id="input" type="text"></div>
+</div>
+<div id="status-bar">
+    {% if show_space %}
+        <div class="progress">
+            <div class="bar" id="space_quota">
+            </div>
+        </div>
+        <span id="space_quota_string">
+    </span>
+    {% endif %}
+    <span id="status">
+     </span>
+</div>
+
+<!-- The Modal -->
+<div id="myModal" class="modal" style="margin-top:20px">
+
+    <!-- Modal content -->
+    <div class="modal-content" style="max-height: 500px;overflow: auto;">
+        <span id="closeid" class="close">&times;</span>
+        <p>..</p>
+     <input type="hidden" id="fileField" value="murka" />
+        <h2>Users to share </h2>
+
+        <input type="text" id="myInput" onkeyup="myFunction2()" placeholder="Search for users.." title="Type in a name">
 
 
+        <div id="myUL">
+            <div class="well" style="max-height: 300px;overflow: auto;">
+                <ul class="list-group checked-list-box">
+                    {% for user1 in users %}
+                       <!--li class="list-group-item">{{ user1.username }}-->
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+                        <li><a href="#"  id ='linkid{{user1.id}}' onclick=" triggerMe1({{ user1.id }})">{{ user1.username }}  <script> document.write(clipboard['path'])</script></a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
 
 
+    </div>
+   <script>
+    function triggerMe1(i) {
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
+   var link =  document.getElementById('linkid'+i)
+        debugger
+   alert('trigger')
+    //link.href = "/docs/share"+clipboard['path']+"&"+i
+     link.href = "murka!"
 
 }
+    </script>
+</div>
+<script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
 
-function myFunction1() {
-    var input, filter, ul, li, a, i, txtValue;
-    alert('here')
-    input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
-    li = ul.getElementsByTagName("li");
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            li[i].style.display = "";
-        } else {
-            li[i].style.display = "none";
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+
+    }
+
+    function myFunction1() {
+        var input, filter, ul, li, a, i, txtValue;
+        alert('here')
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        ul = document.getElementById("myUL");
+        li = ul.getElementsByTagName("li");
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("a")[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "";
+            } else {
+                li[i].style.display = "none";
+            }
         }
     }
+
 
 
 </script>
