--- a/docs/templates/docs/sendshare.html
+++ b/docs/templates/docs/sendshare.html
@@ -9,5 +9,8 @@
 </head>
 <body>
 <h3> generating secure link to share files  {{  path }} by user {{ user1 }} with user {{ user2 }}</h3>
+<h1 class="clearlooks2"> {{ link }}</h1>
+
+<a class="clearlooks2" href="{{ link }}">{{ link }}</a>
 </body>
 </html>
