--- a/docs/templates/docs/sendshare.html
+++ b/docs/templates/docs/sendshare.html
@@ -1,16 +1,11 @@
+{% extends 'blog/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+{% block content %}
 
-        <script type="text/javascript" src="{% static "filemanager/js/script.js" %}"></script>
-</head>
-<body>
+
 <h3> generating secure link to share files  {{  path }} by user {{ user1 }} with user {{ user2 }}</h3>
 <h1 class="clearlooks2"> {{ link }}</h1>
 
 <a class="clearlooks2" href="{{ link }}">{{ link }}</a>
-</body>
-</html>
+
+{% endblock content %}
