--- a/users/templates/users/error.html
+++ b/users/templates/users/error.html
@@ -1,8 +1,8 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-
-  <h1> {{errorstring}}</h1>
+  <h1> Error:</h1>
+  <h2 style="color:red"> {{errorstring}}</h2>
 
 {% endblock content %}
 
