--- a/docs/templates/docs/sendshare.html
+++ b/docs/templates/docs/sendshare.html
@@ -2,43 +2,64 @@
 {% load static %}
 {% block content %}
 
-   <div style="width:600px;border-color:green;">
+      <script>
+        function triggerMail() {
+            alert('triggerMail');
+            let note = document.getElementById('note');
 
-    <h3  > a secure link is generated to share file: {{ path }} by user: {{ user1 }} for user:{{ user2 }}</h3>
+            let link1 = document.getElementById('linkmail');
 
-    <a class="clearlooks2" href="{{ link }}">{{ link }}</a>
+            let link2 = "{{ link }}"
 
-    <p>
+            let res = link2.replace(/\+/g,"%2B")
 
-    </p>
+            link1.href = "{% url 'emailshare' %}?link="+res + "&email={{ user2.email }}&note=\"" + note.value + "\"";
 
-   </div>
-    <h1> Share link  with user: {{ user2 }}</h1>
+            alert(link1.href)
+
+        }
+    </script>
+    <div style="width:600px;border-color:green;">
+
+        <h3> a secure link is generated to share file: {{ path }} by user: {{ user1 }} for user:{{ user2 }}</h3>
+
+        <a class="clearlooks2" href="{{ link }}">{{ link }}</a>
+
+        <p>
+
+        </p>
+
+    </div>
+    <h1> Share link with user: {{ user2 }}</h1>
     <div class="container">
 
         <div class="row">
             <div class="jumbotron">
+                <label for="note'"></label>
+                <input type="text" class="form-control" maxlength="50" id="note" name="note"
+                       placeholder="Add your note to your message, max(50 char)">
+                <p></p>
+                <div class="input-group input-group-lg">
 
-  <input type="text" class="form-control" maxlength="50"  placeholder="Add your note to your message, max(50 char)">
-<p></p>
-<div class="input-group input-group-lg">
-
-  <input type="text" class="form-control" placeholder="Full Name" value="{{ user2.email }}" readonly>
-  <span class="input-group-btn-lg">
-    <a href="{% url 'emailshare' %}?link={{ link }}&email={{ user2.email }}&note=note" class="btn btn-lg" role="button" style="color:white;background-color: #007bff" >email</a>
+                    <input type="text" class="form-control" placeholder="Full Name" value="{{ user2.email }}" readonly>
+                    <span class="input-group-btn-lg">
+       <a href=# class="btn btn-lg"  id="linkmail" style="color:white;background-color: #007bff"
+         onclick="triggerMail()">email</a>
   </span>
-</div>
+                </div>
                 <br>
                 <div class="input-group input-group-lg">
-  <input type="text" class="form-control" placeholder="Full Name" value="{{ user2.profile.phone.formatted}}" readonly>
-  <span class="input-group-btn-lg">
-    <button class="btn btn-lg" type="button" style="color:white;;background-color: #007bff">sms &nbsp; </>
+                    <input type="text" class="form-control" placeholder="Full Name"
+                           value="{{ user2.profile.phone.formatted }}" readonly>
+                    <span class="input-group-btn-lg">
+    <button class="btn btn-lg" type="button" style="color:white;;background-color: #007bff">sms &nbsp; </button>
   </span>
-</div>
+                </div>
 
             </div>
 
 
         </div>
     </div>
+
 {% endblock content %}
