adding expiration time

--- a/docs/templates/docs/sendshare.html
+++ b/docs/templates/docs/sendshare.html
@@ -44,7 +44,20 @@
         </p>
 
     </div>
-    <h1> Share link with user: {{ user2 }}</h1>
+      <h2> Share link with user: {{ user2 }}</h2>
+
+    <div class ='jumbotron' style="width:403px">
+    <strong> Select time for the link to expire: </strong>
+
+    <select>
+  <option value="0">None</option>
+  <option value="1">5 min</option>
+  <option value="2">1 hour</option>
+  <option value="3">1 day</option>
+</select>
+
+    </div>
+
     <div class="container">
 
         <div class="row">
